# wagtail

beacon/src/: pyproject.toml
beacon/src/beacon_web/: Dockerfile  manage.py
beacon/src/beacon_web/beacon_web/: wsgi.py
beacon/src/beacon_web/beacon_web/settings/: base.py  dev.py
beacon/src/beacon_web/core/: context_processors.py
beacon/src/beacon_web/core/migrations/: 0001_initial.py  0002_alter_footermenu_options_alter_menus_options.py  0003_menus_menu_image.py  0004_faq_package_service_testimonial.py  0005_delete_faq_delete_package_delete_service_and_more.py
beacon/src/beacon_web/core/models/: snippets.py
beacon/src/beacon_web/home/migrations/: 0003_ccorppage_llcpage_nonprofitpage_scorppage.py  0004_ccorppage_intro_homepage_intro_llcpage_intro_and_more.py
beacon/src/beacon_web/home/models/: __init__.py  ccorp.py  home.py  llc.py  nonprofit.py  scorp.py
beacon/src/beacon_web/home/templates/home/: home_page.html
beacon/src/beacon_web/theme/static_src/: package-lock.json
beacon/src/beacon_web/theme/static_src/src/: styles.css
beacon/src/beacon_web/theme/templates/includes/: footer.html  header.html  navbar.html
beacon/src/beacon_web/theme/templates/landing/: base.html
bruhm/src/bruhm_web/: manage.py
bruhm/src/bruhm_web/bruhm_web/: wsgi.py
bruhm/src/bruhm_web/core/: context_processors.py
bruhm/src/bruhm_web/core/migrations/: 0001_initial.py  0003_menus_link_page_menus_link_url.py  0004_testimonial.py
bruhm/src/bruhm_web/home/: models.py
wagtail/src/: pyproject.toml
wagtail/src/bruhm_web/: Dockerfile
(+11 files in other folders)
